--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
           </ul>
         </header>
         <section>
-          <h1 hidden>Портфоліо</h1>
+          <h1 class="visually-hidden">Портфоліо</h1>
           <ul>
             <li><button type="button" class="main-btn link">Усі</button></li>
             <li><button type="button" class="main-btn link">Веб-сайти</button></li>
