--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <button type="button" class="content-btn link">Замовити послугу</button>
       </section>
       <section class="text">
-        <h2 hidden>Наші переваги</h2>
+        <h2 class="visually-hidden">Наші переваги</h2>
         <ul class="list">
           <li>
             <h3 class="text-title">Увага до деталей</h3>
