index дів контейнер

--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="“stylesheet”"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="site-body">
-    <main>
-      <header class="header">
+    <header class="header">
+      <div class="container">
         <nav>
-          <a href="./index.html" class="header-logo link"
-            ><span class="span-logo">Web</span>Studio</a
+          <a href="./index.html" class="header-logo link">
+            <span class="span-logo">Web</span>Studio</a
           >
           <ul class="heder-list list">
             <li class="header-item">
@@ -44,137 +48,151 @@
             >
           </li>
         </ul>
-      </header>
-      <section class="content">
-        <h1 class="content-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="content-btn link">Замовити послугу</button>
+      </div>
+    </header>
+    <main>
+      <section class="hero-content">
+        <div class="container">
+          <h1 class="content-title">Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="content-btn link">
+            Замовити послугу
+          </button>
+        </div>
       </section>
       <section class="text">
-        <h2 class="visually-hidden">Наші переваги</h2>
-        <ul class="list">
-          <li>
-            <h3 class="text-title">Увага до деталей</h3>
-            <p class="text-paragraph">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="text-title">Пунктуальність</h3>
-            <p class="text-paragraph">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="text-title">Планування</h3>
-            <p class="text-paragraph">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="text-title">Сучасні технології</h3>
-            <p class="text-paragraph">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Наші переваги</h2>
+          <ul class="list">
+            <li>
+              <h3 class="text-title">Увага до деталей</h3>
+              <p class="text-paragraph">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="text-title">Пунктуальність</h3>
+              <p class="text-paragraph">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3 class="text-title">Планування</h3>
+              <p class="text-paragraph">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3 class="text-title">Сучасні технології</h3>
+              <p class="text-paragraph">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="different">
-        <h2 class="different-title">Чим ми займаємося</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/programer.jpg"
-              alt="programer-working"
-              width="270"
-              height="260"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/interface-mobile-phones.jpg"
-              alt="smartphones-team-creators-is-working-"
-              width="270"
-              height="260"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/creative-artist.jpg"
-              alt="web-design"
-              width="270"
-              height="260"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="different-title">Чим ми займаємося</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./images/programer.jpg"
+                alt="programer-working"
+                width="270"
+                height="260"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/interface-mobile-phones.jpg"
+                alt="smartphones-team-creators-is-working-"
+                width="270"
+                height="260"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/creative-artist.jpg"
+                alt="web-design"
+                width="270"
+                height="260"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/ihor.jpg"
-              alt="Чоловік на білому фоні"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-desc">Ігор Дем'яненко</h3>
-            <p lang="en" class="text-paragraph">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/olga.jpg"
-              alt="Жінка в окулярах"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-desc">Ольга Рєпіна</h3>
-            <p lang="en" class="text-paragraph">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/nikolay.jpg"
-              alt="Чоловік без окулярів"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-desc">Микола Тарасов</h3>
-            <p lang="en" class="text-paragraph">UI Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/mihail.jpg"
-              alt="Чоловік без окулярів"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-desc">Михайло Єрмаков</h3>
-            <p lang="en" class="paragraph">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/ihor.jpg"
+                alt="Чоловік на білому фоні"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-desc">Ігор Дем'яненко</h3>
+              <p lang="en" class="text-paragraph">Product Designer</p>
+            </li>
+            <li>
+              <img
+                src="./images/olga.jpg"
+                alt="Жінка в окулярах"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-desc">Ольга Рєпіна</h3>
+              <p lang="en" class="text-paragraph">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="./images/nikolay.jpg"
+                alt="Чоловік без окулярів"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-desc">Микола Тарасов</h3>
+              <p lang="en" class="text-paragraph">UI Designer</p>
+            </li>
+            <li>
+              <img
+                src="./images/mihail.jpg"
+                alt="Чоловік без окулярів"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-desc">Михайло Єрмаков</h3>
+              <p lang="en" class="paragraph">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html"
-        ><span class="footer-span-logo">Web</span>Studio</a
-      >
-      <address class="footer-address">
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <ul>
-          <li>
-            <a class="footer-contact link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="footer-contact link" href="tel:+380961111111">
-              +38 044 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="footer-logo link" href="./index.html"
+          ><span class="footer-span-logo">Web</span>Studio</a
+        >
+        <address class="footer-address">
+          <p>м. Київ, пр-т Лесі Українки, 26</p>
+          <ul>
+            <li>
+              <a class="footer-contact link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="footer-contact link" href="tel:+380961111111">
+                +38 044 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
