--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo link" href="./index.html"
-          ><span class="footer-span-logo">Web</span>Studio</a
+        <a class="footer-logo link" href="./index.html">
+          <span class="footer-span-logo">Web</span>Studio</a
         >
         <address class="footer-address">
           <p>м. Київ, пр-т Лесі Українки, 26</p>
