--- a/portfolio.html
+++ b/portfolio.html
@@ -11,11 +11,16 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <body class="site-body">
       <main>
         <header class="header">
+          <div class="container">
           <nav>
             <a href="./index.html" class="header-logo link"><span class="span-logo">Web</span>Studio</a>
             <ul class="header-list list" >
@@ -28,8 +33,10 @@
             <li class="header-item"><a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li class="header-item"><a class="header-tel link" href="tel:+380961111111"> +38 044 111 11 11</a></li>
           </ul>
+          </div>
         </header>
         <section>
+          <div class="container">
           <h1 class="visually-hidden">Портфоліо</h1>
           <ul>
             <li><button type="button" class="main-btn link">Усі</button></li>
@@ -38,6 +45,7 @@
             <li><button type="button" class="main-btn link">Дизайн</button></li>
             <li><button type="button" class="main-btn link">Маркетинг</button></li>
           </ul>
+          </div>
         </section>
         <section>
           <ul>
