--- a/portfolio.html
+++ b/portfolio.html
@@ -48,6 +48,7 @@
           </div>
         </section>
         <section>
+          <div class="container">
           <ul>
             <li>
               <img
@@ -103,10 +104,12 @@
               <p class="portfol-paragraf" >Додаток</p>
             </li>
           </ul>
+          </div>
         </section>
       </main>
     </body>
     <footer class="footer">
+       <div class="container">
       <a class="footer-logo link" href="./index.html"
         ><span class="footer-span-logo">Web</span>Studio</a
       >
@@ -125,6 +128,7 @@
           </li>
         </ul>
       </address>
+      </div>
     </footer>
   </html>
 </html>
