--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <body class="site-body">
     <header class="header">
       <div class="container">
-        <nav>
+        <nav class="nav">
           <a href="./index.html" class="header-logo link">
             <span class="span-logo">Web</span>Studio</a
           >
-          <ul class="heder-list list">
+          <ul class="header-list list">
             <li class="header-item">
               <a class="header-link link current" href="./index.html">Студія</a>
             </li>
@@ -36,7 +36,7 @@
             </li>
           </ul>
         </nav>
-        <ul class="heder-list list">
+        <ul class="header-list list">
           <li class="header-item">
             <a class="header-mail link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -52,7 +52,7 @@
     </header>
     <main>
       <section class="hero-content">
-        <div class="container">
+        <div class="container hero-container">
           <h1 class="content-title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="content-btn link">
             Замовити послугу
