--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body class="site-body">
     <header class="header">
-      <div class="container">
+      <div class="container list">
         <nav class="nav">
           <a href="./index.html" class="header-logo link">
             <span class="span-logo">Web</span>Studio</a
@@ -53,7 +53,7 @@
     <main>
       <section class="hero-content">
         <div class="container hero-container">
-          <h1 class="content-title">Ефективні рішення для вашого бізнесу</h1>
+          <h1 class="content-title">Ефективні рішення для <br /> вашого бізнесу</h1>
           <button type="button" class="content-btn link">
             Замовити послугу
           </button>
@@ -124,10 +124,10 @@
           </ul>
         </div>
       </section>
-      <section class="team">
+      <section class="team link">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
-          <ul>
+          <ul class="link list" </ul>
             <li>
               <img
                 src="./images/ihor.jpg"
