--- a/portfolio.html
+++ b/portfolio.html
@@ -20,25 +20,41 @@
     <body class="site-body">
       <main>
         <header class="header">
-          <div class="container">
-          <nav>
-            <a href="./index.html" class="header-logo link"><span class="span-logo">Web</span>Studio</a>
-            <ul class="header-list list" >
-              <li class="header-item"><a class="header-link link " href="./index.html">Студія</a></li>
-              <li class="header-item"><a class="header-link link current" href="./portfolio.html">Портфоліо</a></li>
-              <li class="header-item"><a class="header-link link" href="#">Контакти</a></li>
-            </ul>
-          </nav>
+      <div class="container list">
+        <nav class="nav">
+          <a href="./index.html" class="header-logo link">
+            <span class="span-logo">Web</span>Studio</a
+          >
           <ul class="header-list list">
-            <li class="header-item"><a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="header-item"><a class="header-tel link" href="tel:+380961111111"> +38 044 111 11 11</a></li>
+            <li class="header-item">
+              <a class="header-link link" href="./index.html">Студія</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link current" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="#">Контакти</a>
+            </li>
           </ul>
-          </div>
-        </header>
+        </nav>
+        <ul class="header-list list">
+          <li class="header-item">
+            <a class="header-mail link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header-item">
+            <a class="header-tel link" href="tel:+380961111111">
+              +38 044 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
+    </header>
         <section>
           <div class="container">
           <h1 class="visually-hidden">Портфоліо</h1>
-          <ul>
+          <ul class="list">
             <li><button type="button" class="main-btn link">Усі</button></li>
             <li><button type="button" class="main-btn link">Веб-сайти</button></li>
             <li><button type="button" class="main-btn link">Додатки</button></li>
@@ -49,7 +65,7 @@
         </section>
         <section>
           <div class="container">
-          <ul>
+          <ul class="list">
             <li>
               <img
                 src="./images/portfolio-img/laptop.jpg"
