--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   
-  <body>
+  <body class="site-body">
     <header class="header">
       <div class="container nav">
         <nav class="header-nav">
-          <a href="./index.html" class="header-logo"><span class="logo link">Web</span>Studio</a>
-          <ul class="header-nav-list list">
+          <a href="./index.html" class="header-logo link"><span class="span-logo">Web</span>Studio</a>
+          <ul class="header-nav list">
             <li class="header-nav-item">
               <a class="header-nav-link link current" href="./index.html"
                 >Студія</a
@@ -41,12 +41,12 @@
         </nav>
         <ul class="header-contact-list list">
           <li class="header-contact-item">
-            <a class="header-contact-link link" href="mailto:info@devstudio.com"
+            <a class="header-contact-mail link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact-item">
-            <a class="header-contact-link link" href="tel:+380961111111">
+            <a class="header-contact-tel link" href="tel:+380961111111">
               +38 044 111 11 11</a
             >
           </li>
@@ -189,8 +189,8 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo" href="./index.html">
-          <span class="logo-link">Web</span>Studio</a
+        <a class="footer-logo link" href="./index.html">
+          <span class="logo link">Web</span>Studio</a
         >
         <address class="footer-contact">
           <p>м. Київ, пр-т Лесі Українки, 26</p>
