--- a/portfolio.html
+++ b/portfolio.html
@@ -17,34 +17,36 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
     </head>
-    <body class="site-body">
+    <body>
       <main>
-        <header class="header">
-      <div class="container list">
-        <nav class="nav">
-          <a href="./index.html" class="header-logo link">
-            <span class="span-logo">Web</span>Studio</a
-          >
-          <ul class="header-list list">
-            <li class="header-item">
-              <a class="header-link link" href="./index.html">Студія</a>
+       <header class="header">
+      <div class="container nav">
+        <nav class="header-nav">
+          <a href="./index.html" class="header-logo link"><span class="logo link">Web</span>Studio</a>
+          <ul class="header-nav-list list">
+            <li class="header-nav-item">
+              <a class="header-nav-link link" href="./index.html"
+                >Студія</a
+              >
             </li>
-            <li class="header-item">
-              <a class="header-link link current" href="./portfolio.html">Портфоліо</a>
+            <li class="header-nav-item">
+              <a class="header-nav-link link current" href="./portfolio.html"
+                >Портфоліо</a
+              >
             </li>
-            <li class="header-item">
-              <a class="header-link link" href="#">Контакти</a>
+            <li class="header-nav-item">
+              <a class="header-nav-link link" href="#">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-mail link" href="mailto:info@devstudio.com"
+        <ul class="header-contact-list list">
+          <li class="header-contact-item">
+            <a class="header-contact-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-item">
-            <a class="header-tel link" href="tel:+380961111111">
+          <li class="header-contact-item">
+            <a class="header-contact-link link" href="tel:+380961111111">
               +38 044 111 11 11</a
             >
           </li>
