--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
         </ul>
       </div>
     </header>
-   
-    <main>
-      <div class="container">
-      <section class="hero">
+       <main>
+            <section class="hero">
+        <div class="container">
         <h1 class="hero-title">Ефективні рішення для </br> вашого бізнесу</h1>
-        <button type="button" class="hero-btn">Замовити послугу</button>
+        <button type="button" class="hero-btn link">Замовити послугу</button>
+        </div>
       </section>
       <section class="features-section">
-        </div>
+        
         <div class="container">
           <h2 hidden>Наші переваги</h2>
           <ul class="features-list list">
