--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,11 @@
-  <!DOCTYPE html>
-  <html lang="uk">
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>WebStudio</title>
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
+<!DOCTYPE html>
+<html lang="uk">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -16,12 +16,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    </head>
-    <body class="site-body">
+  </head>
+  <body class="site-body">
     <header class="header">
       <div class="container nav">
         <nav class="header-nav">
-          <a href="./index.html" class="header-logo link"><span class="span-logo">Web</span>Studio</a>
+          <a href="./index.html" class="header-logo link"
+            ><span class="span-logo">Web</span>Studio</a
+          >
           <ul class="header-nav list">
             <li class="header-nav-item">
               <a class="header-nav-link link current" href="./index.html"
@@ -53,100 +55,161 @@
       </div>
     </header>
     <main class="main">
-        <section class="section-portfolio">
-          <div class="container">
+      <section class="section-portfolio">
+        <div class="container">
           <h1 hidden>Портфоліо</h1>
           <ul class="portfolio-main-btn list">
-            <li><button type="button" class="portfolio-btn link">Усі</button></li>
-            <li><button type="button" class="portfolio-btn link">Веб-сайти</button></li>
-            <li><button type="button" class="portfolio-btn link">Додатки</button></li>
-            <li><button type="button" class="portfolio-btn link">Дизайн</button></li>
-            <li><button type="button" class="portfolio-btn link">Маркетинг</button></li>
+            <li>
+              <button type="button" class="portfolio-btn link">Усі</button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-btn link">
+                Веб-сайти
+              </button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-btn link">Додатки</button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-btn link">Дизайн</button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-btn link">
+                Маркетинг
+              </button>
+            </li>
           </ul>
-          </div>
-        </section>
-        <section>
-          <div class="container">
+        </div>
+      </section>
+      <section>
+        <div class="container">
           <ul class="container-list list">
-            <li>
-              <img
-                src="./images/portfolio-img/laptop.jpg"
-                alt="laptop"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfol-title">Технокряк</h2>
-              <p class="portfol-paragraf">Веб-сайт</p>
+            <li class="card-list">
+              <a class="link" href="./images/portfolio-img/laptop.jpg">
+                <img
+                  class="img"
+                  src="./images/portfolio-img/laptop.jpg"
+                  alt="laptop"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title link">Технокряк</h2>
+                <p class="portfolio-paragrapf">Веб-сайт</p>
+              </a>
             </li>
-            <li>
-              <img src="./images/portfolio-img/basketball.jpg" alt="poster" />
-              <h2 lang="en" class="portfol-title">Постер New Orlean vs Golden Star</h2>
-              <p class="portfol-paragraf" >Дизайн</p>
+
+            <li class="card-list">
+              <a class="link" href="./images/portfolio-img/basketball.jpg">
+                <img src="./images/portfolio-img/basketball.jpg" alt="poster" />
+                <h2 lang="en" class="portfolio-title">
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p class="portfolio-paragrapf">Дизайн</p>
+              </a>
             </li>
-            <li>
-              <img
-                src="./images/portfolio-img/baner-seafood.jpg"
-                alt="seafood"
-              />
-              <h2 class="portfol-title" >Ресторан Seafood</h2>
-              <p class="portfol-paragraf" >Додаток</p>
+
+            <li class="card-list">
+              <a class="link" href="./images/portfolio-img/baner-seafood.jpg">
+                <img
+                  src="./images/portfolio-img/baner-seafood.jpg"
+                  alt="seafood"
+                />
+                <h2 class="portfolio-title">Ресторан Seafood</h2>
+                <p class="portfolio-paragrapf">Додаток</p>
+              </a>
             </li>
-            <li>
-              <img src="./images/portfolio-img/headphone.jpg" alt="headphone" />
-              <h2 lang="en" class="portfol-title">Проєкт Prime</h2>
-              <p class="portfol-paragraf" >Маркетинг</p>
+
+            <li class="card-list">
+              <a class="link" href="./images/portfolio-img/headphone.jpg">
+                <img
+                  src="./images/portfolio-img/headphone.jpg"
+                  alt="headphone"
+                />
+                <h2 lang="en" class="portfolio-title">Проєкт Prime</h2>
+                <p class="portfolio-paragrapf">Маркетинг</p>
+              </a>
             </li>
-            <li>
-              <img src="./images/portfolio-img/box.jpg" alt="box" />
-              <h2 class="portfol-title" >Проєкт Boxes</h2>
-              <p class="portfol-paragraf" >Додаток</p>
+
+            <li class="card-list">
+              <a class="link" href="./images/portfolio-img/box.jpg">
+                <img src="./images/portfolio-img/box.jpg" alt="box" />
+                <h2 class="portfolio-title">Проєкт Boxes</h2>
+                <p class="portfolio-paragrapf">Додаток</p></a
+              >
             </li>
-            <li>
-              <img src="./images/portfolio-img/pc.jpg" alt="pc" />
-              <h2 lang="en" class="portfol-title" >Inspiration has no Borders</h2>
-              <p class="portfol-paragraf" >Веб-сайт</p>
+
+            <li class="card-list">
+              <a class="link" href="./images/portfolio-img/pc.jpg">
+                <img src="./images/portfolio-img/pc.jpg" alt="pc" />
+                <h2 lang="en" class="portfolio-title">
+                  Inspiration has no Borders
+                </h2>
+                <p class="portfolio-paragrapf">Веб-сайт</p></a
+              >
             </li>
-            <li>
-              <img src="./images/portfolio-img/magazine.jpg" alt="magazine" />
-              <h2 lang="en" class="portfol-title" >Видання Limited Edition</h2>
-              <p class="portfol-paragraf" >Дизайн</p>
+
+            <li class="card-list">
+              <a class="link" href="./images/portfolio-img/magazine.jpg">
+                <img src="./images/portfolio-img/magazine.jpg" alt="magazine" />
+                <h2 lang="en" class="portfolio-title">
+                  Видання Limited Edition
+                </h2>
+                <p class="portfolio-paragrapf">Дизайн</p></a
+              >
             </li>
-            <li>
-              <img src="./images/portfolio-img/baner-lab.jpg" alt="baner-lab" />
-              <h2 class="potfol-title" >Проєкт LAB</h2>
-              <p class="portfol-paragraf" >Маркетинг</p>
+
+            <li class="card-list">
+              <a class="link" href="./images/portfolio-img/baner-lab.jpg">
+                <img
+                  src="./images/portfolio-img/baner-lab.jpg"
+                  alt="baner-lab"
+                />
+                <h2 class="potfolio-title">Проєкт LAB</h2>
+                <p class="portfolio-paragrapf">Маркетинг</p></a
+              >
             </li>
-            <li>
-              <img src="./images/portfolio-img/notebook.jpg" alt="notebook" />
-              <h2 lang="en" class="portfol-title" >Growing Business</h2>
-              <p class="portfol-paragraf" >Додаток</p>
+
+            <li class="card-list">
+              <a class="link" href="./images/portfolio-img/notebook.jpg">
+                <img src="./images/portfolio-img/notebook.jpg" alt="notebook" />
+                <h2 lang="en" class="portfolio-title">Growing Business</h2>
+                <p class="portfolio-paragrapf">Додаток</p></a
+              >
             </li>
           </ul>
-          </div>
-        </section>
-      </main>
-    </body>
-    <footer class="footer">
-       <div class="container">
-      <a class="footer-logo link" href="./index.html"
-        ><span class="footer-span-logo">Web</span>Studio</a
+        </div>
+      </section>
+    </main>
+  </body>
+  <footer class="footer">
+    <div class="container">
+      <a class="footer-logo link" href="./index.html">
+        <span class="logo link">Web</span>Studio</a
       >
-      <address class="footer-address">
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <ul>
+      <address class="footer-contact">
+        <ul class="footer-contact-list list">
           <li>
-            <a class="footer-contact link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a
+              class="footer-contact-gps link"
+              href="https://google.com"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
           <li>
-            <a class="footer-contact link" href="tel:+380961111111">
+            <a class="footer-contact-mail link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+
+          <li>
+            <a class="footer-contact-tel link" href="tel:+380961111111">
               +38 044 111 11 11</a
             >
           </li>
         </ul>
       </address>
-      </div>
-    </footer>
-  </html>
+    </div>
+  </footer>
 </html>
