--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container nav">
         <nav class="header-nav">
           <a href="./index.html" class="header-logo link"><span class="span-logo">Web</span>Studio</a>
-          <ul class="header-nav list">
+          <ul class="header-list list">
             <li class="header-nav-item">
               <a class="header-nav-link link current" href="./index.html"
                 >Студія</a
@@ -64,7 +64,7 @@
 
       <section class="features">
         <div class="container">
-          <h2 class="subject">Наші переваги</h2>
+          <h2 hidden class="benefits">Наші переваги</h2>
           <ul class="list">
             <li>
               <h3 class="features-title">Увага до деталей</h3>
