--- a/portfolio.html
+++ b/portfolio.html
@@ -24,14 +24,12 @@
           <a href="./index.html" class="header-logo link"
             ><span class="span-logo">Web</span>Studio</a
           >
-          <ul class="header-nav list">
+          <ul class="header-list list">
             <li class="header-nav-item">
-              <a class="header-nav-link link current" href="./index.html"
-                >Студія</a
-              >
+              <a class="header-nav-link link" href="./index.html">Студія</a>
             </li>
             <li class="header-nav-item">
-              <a class="header-nav-link link" href="./portfolio.html"
+              <a class="header-nav-link link current" href="./portfolio.html"
                 >Портфоліо</a
               >
             </li>
