--- a/portfolio.html
+++ b/portfolio.html
@@ -162,7 +162,7 @@
                   src="./images/portfolio-img/baner-lab.jpg"
                   alt="baner-lab"
                 />
-                <h2 class="potfolio-title">Проєкт LAB</h2>
+                <h2 class="portfolio-title">Проєкт LAB</h2>
                 <p class="portfolio-paragrapf">Маркетинг</p></a
               >
             </li>
