--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
         </div>
       </section>
       <section>
-        <div class="container">
+        <div class="container-portfolio">
           <ul class="container-list list">
             <li class="card-list">
               <a class="link" href="./images/portfolio-img/laptop.jpg">
