--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
     </header>
     <main class="main">
       <section class="section-portfolio">
-        <div class="container">
+        <div class="container-btn">
           <h1 hidden>Портфоліо</h1>
           <ul class="portfolio-main-btn list">
             <li>
