--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <link
-      rel="“stylesheet”"
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -67,27 +67,27 @@
         <div class="container">
           <h2 hidden class="benefits">Наші переваги</h2>
           <ul class="list">
-            <li>
+            <li class="features-item">
               <h3 class="features-title">Увага до деталей</h3>
               <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="features-title">Пунктуальність</h3>
               <p class="features-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="features-title">Планування</h3>
               <p class="features-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="features-title">Сучасні технології</h3>
               <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -199,7 +199,7 @@
         >
         <address class="footer-contact">
           <ul class="footer-contact-list list">
-            <li>
+            <li class="footer-contact-item">
               <a
                 class="footer-contact-gps link"
                 href="https://google.com"
@@ -208,7 +208,7 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-contact-item">
               <a
                 class="footer-contact-mail link"
                 href="mailto:info@devstudio.com"
