--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="site-body">
@@ -54,7 +58,7 @@
     </header>
     <main class="main">
       <section class="section-portfolio">
-        <div class="container-btn">
+        <div class="container-portfolio">
           <h1 hidden>Портфоліо</h1>
           <ul class="portfolio-main-btn list">
             <li>
@@ -77,10 +81,7 @@
               </button>
             </li>
           </ul>
-        </div>
-      </section>
-      <section>
-        <div class="container-portfolio">
+
           <ul class="container-list list">
             <li class="card-list">
               <a class="link" href="./images/portfolio-img/laptop.jpg">
@@ -186,7 +187,7 @@
       >
       <address class="footer-contact">
         <ul class="footer-contact-list list">
-          <li>
+          <li class="footer-contact-item">
             <a
               class="footer-contact-gps link"
               href="https://google.com"
@@ -195,7 +196,7 @@
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li>
+          <li class="footer-contact-item">
             <a class="footer-contact-mail link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
