--- a/portfolio.html
+++ b/portfolio.html
@@ -61,21 +61,21 @@
         <div class="container-portfolio">
           <h1 hidden>Портфоліо</h1>
           <ul class="portfolio-main-btn list">
-            <li>
+            <li class="portfolio-filter">
               <button type="button" class="portfolio-btn link">Усі</button>
             </li>
-            <li>
+            <li class="portfolio-filter">
               <button type="button" class="portfolio-btn link">
                 Веб-сайти
               </button>
             </li>
-            <li>
+            <li class="portfolio-filter">
               <button type="button" class="portfolio-btn link">Додатки</button>
             </li>
-            <li>
+            <li class="portfolio-filter">
               <button type="button" class="portfolio-btn link">Дизайн</button>
             </li>
-            <li>
+            <li class="portfolio-filter">
               <button type="button" class="portfolio-btn link">
                 Маркетинг
               </button>
@@ -92,18 +92,28 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-title link">Технокряк</h2>
-                <p class="portfolio-paragrapf">Веб-сайт</p>
+
+                <div class="portfolio-text">
+                  <h2 class="portfolio-title link">Технокряк</h2>
+                  <p class="portfolio-paragrapf">Веб-сайт</p>
+                </div>
               </a>
             </li>
 
             <li class="card-list">
               <a class="link" href="./images/portfolio-img/basketball.jpg">
-                <img src="./images/portfolio-img/basketball.jpg" alt="poster" />
-                <h2 lang="en" class="portfolio-title">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p class="portfolio-paragrapf">Дизайн</p>
+                <img
+                  src="./images/portfolio-img/basketball.jpg"
+                  alt="poster"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-text">
+                  <h2 lang="en" class="portfolio-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="portfolio-paragrapf">Дизайн</p>
+                </div>
               </a>
             </li>
 
@@ -112,9 +122,13 @@
                 <img
                   src="./images/portfolio-img/baner-seafood.jpg"
                   alt="seafood"
+                  width="370"
+                  height="294"
                 />
-                <h2 class="portfolio-title">Ресторан Seafood</h2>
-                <p class="portfolio-paragrapf">Додаток</p>
+                <div class="portfolio-text">
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-paragrapf">Додаток</p>
+                </div>
               </a>
             </li>
 
@@ -123,37 +137,62 @@
                 <img
                   src="./images/portfolio-img/headphone.jpg"
                   alt="headphone"
+                  width="370"
+                  height="294"
                 />
-                <h2 lang="en" class="portfolio-title">Проєкт Prime</h2>
-                <p class="portfolio-paragrapf">Маркетинг</p>
+                <div class="portfolio-text">
+                  <h2 lang="en" class="portfolio-title">Проєкт Prime</h2>
+                  <p class="portfolio-paragrapf">Маркетинг</p>
+                </div>
               </a>
             </li>
 
             <li class="card-list">
               <a class="link" href="./images/portfolio-img/box.jpg">
-                <img src="./images/portfolio-img/box.jpg" alt="box" />
-                <h2 class="portfolio-title">Проєкт Boxes</h2>
-                <p class="portfolio-paragrapf">Додаток</p></a
+                <img
+                  src="./images/portfolio-img/box.jpg"
+                  alt="box"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-text">
+                  <h2 class="portfolio-title">Проєкт Boxes</h2>
+                  <p class="portfolio-paragrapf">Додаток</p>
+                </div></a
               >
             </li>
 
             <li class="card-list">
               <a class="link" href="./images/portfolio-img/pc.jpg">
-                <img src="./images/portfolio-img/pc.jpg" alt="pc" />
-                <h2 lang="en" class="portfolio-title">
-                  Inspiration has no Borders
-                </h2>
-                <p class="portfolio-paragrapf">Веб-сайт</p></a
+                <img
+                  src="./images/portfolio-img/pc.jpg"
+                  alt="pc"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-text">
+                  <h2 lang="en" class="portfolio-title">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="portfolio-paragrapf">Веб-сайт</p>
+                </div></a
               >
             </li>
 
             <li class="card-list">
               <a class="link" href="./images/portfolio-img/magazine.jpg">
-                <img src="./images/portfolio-img/magazine.jpg" alt="magazine" />
-                <h2 lang="en" class="portfolio-title">
-                  Видання Limited Edition
-                </h2>
-                <p class="portfolio-paragrapf">Дизайн</p></a
+                <img
+                  src="./images/portfolio-img/magazine.jpg"
+                  alt="magazine"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-text">
+                  <h2 lang="en" class="portfolio-title">
+                    Видання Limited Edition
+                  </h2>
+                  <p class="portfolio-paragrapf">Дизайн</p>
+                </div></a
               >
             </li>
 
@@ -162,17 +201,28 @@
                 <img
                   src="./images/portfolio-img/baner-lab.jpg"
                   alt="baner-lab"
+                  width="370"
+                  height="294"
                 />
-                <h2 class="portfolio-title">Проєкт LAB</h2>
-                <p class="portfolio-paragrapf">Маркетинг</p></a
+                <div class="portfolio-text">
+                  <h2 class="portfolio-title">Проєкт LAB</h2>
+                  <p class="portfolio-paragrapf">Маркетинг</p>
+                </div></a
               >
             </li>
 
             <li class="card-list">
               <a class="link" href="./images/portfolio-img/notebook.jpg">
-                <img src="./images/portfolio-img/notebook.jpg" alt="notebook" />
-                <h2 lang="en" class="portfolio-title">Growing Business</h2>
-                <p class="portfolio-paragrapf">Додаток</p></a
+                <img
+                  src="./images/portfolio-img/notebook.jpg"
+                  alt="notebook"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-text">
+                  <h2 lang="en" class="portfolio-title">Growing Business</h2>
+                  <p class="portfolio-paragrapf">Додаток</p>
+                </div></a
               >
             </li>
           </ul>
