index після перевірки

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="container">
           <h2 class="different-title">Чим ми займаємося</h2>
           <ul class="list">
-            <li>
+            <li class="different-item">
               <img
                 class=""
                 src="./images/programer.jpg"
@@ -120,7 +120,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="different-item">
               <img
                 class=""
                 src="./images/creative-artist.jpg"
@@ -216,7 +216,7 @@
               >
             </li>
 
-            <li>
+            <li class="footer-contact-item">
               <a class="footer-contact-tel link" href="tel:+380961111111">
                 +38 044 111 11 11</a
               >
