--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
   </head>
   <body class="site-body">
     <header class="header">
-      <div class="container nav">
+      <div class="contact-nav nav">
         <nav class="header-nav">
           <a href="./index.html" class="header-logo link"
             ><span class="span-logo">Web</span>Studio</a
@@ -56,6 +56,7 @@
         </ul>
       </div>
     </header>
+
     <main class="main">
       <section class="section-portfolio">
         <div class="container-portfolio">
@@ -82,8 +83,8 @@
             </li>
           </ul>
 
-          <ul class="container-list list">
-            <li class="card-list">
+          <ul class="card-list list">
+            <li class="brite-list">
               <a class="link" href="./images/portfolio-img/laptop.jpg">
                 <img
                   class="img"
@@ -100,7 +101,7 @@
               </a>
             </li>
 
-            <li class="card-list">
+            <li class="brite-list">
               <a class="link" href="./images/portfolio-img/basketball.jpg">
                 <img
                   src="./images/portfolio-img/basketball.jpg"
@@ -117,7 +118,7 @@
               </a>
             </li>
 
-            <li class="card-list">
+            <li class="brite-list">
               <a class="link" href="./images/portfolio-img/baner-seafood.jpg">
                 <img
                   src="./images/portfolio-img/baner-seafood.jpg"
@@ -132,7 +133,7 @@
               </a>
             </li>
 
-            <li class="card-list">
+            <li class="brite-list">
               <a class="link" href="./images/portfolio-img/headphone.jpg">
                 <img
                   src="./images/portfolio-img/headphone.jpg"
@@ -147,7 +148,7 @@
               </a>
             </li>
 
-            <li class="card-list">
+            <li class="brite-list">
               <a class="link" href="./images/portfolio-img/box.jpg">
                 <img
                   src="./images/portfolio-img/box.jpg"
@@ -162,7 +163,7 @@
               >
             </li>
 
-            <li class="card-list">
+            <li class="brite-list">
               <a class="link" href="./images/portfolio-img/pc.jpg">
                 <img
                   src="./images/portfolio-img/pc.jpg"
@@ -179,7 +180,7 @@
               >
             </li>
 
-            <li class="card-list">
+            <li class="brite-list">
               <a class="link" href="./images/portfolio-img/magazine.jpg">
                 <img
                   src="./images/portfolio-img/magazine.jpg"
@@ -196,7 +197,7 @@
               >
             </li>
 
-            <li class="card-list">
+            <li class="brite-list">
               <a class="link" href="./images/portfolio-img/baner-lab.jpg">
                 <img
                   src="./images/portfolio-img/baner-lab.jpg"
@@ -211,7 +212,7 @@
               >
             </li>
 
-            <li class="card-list">
+            <li class="brite-list">
               <a class="link" href="./images/portfolio-img/notebook.jpg">
                 <img
                   src="./images/portfolio-img/notebook.jpg"
